[package]
name = "mqtt5"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num_enum = "^0.7.5"

[dependencies.pyo3]
version = "^0.28.0"
features = ["abi3-py311"]

[profile.release]
codegen-units = 1
lto = "fat"

[lints.clippy]
enum_variant_names = "allow"
too_many_arguments = "allow"
