[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "mqtt5"
description = "The MQTTv5 protocol for Python written in Rust"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Felix Böhm", email = "f@bo3hm.com" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = []

[project.urls]
"Source" = "https://github.com/empicano/mqtt5"
"Issue tracker" = "https://github.com/empicano/mqtt5/issues"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "mqttproto",
    "pyperf>=2.9.0",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]
strip = true

[tool.uv]
# Rebuild the project when any of these files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**" },
]

[tool.uv.sources]
mqttproto = { git = "https://github.com/empicano/mqttproto.git" }

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma
    "FIX002",  # line-contains-todo
    "TD003",   # missing-todo-link
    "PYI011",  # typed-argument-default-in-stub
    "PLR0913", # too-many-arguments
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
]
"tests/**.py" = [
    "INP001",  # implicit-namespace-package
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    "S106",    # hardcoded-password-func-arg
    "SLF001",  # private-member-access
]
